04/01/2023 Agregamos todas las Skills

--- a/index.html
+++ b/index.html
@@ -153,26 +153,100 @@
         <div class="col-5" id="costado">
             <!------------ CODIGO DE SKILLS ------------>
             <div class="row">
-                <h4>COMPETENCIAS <img src="img/flecha.png" id="mostrar4"></h4>
+                <h4>COMPETENCIAS <img src="img/flecha2.png" id="mostrar4"></h4>
                 <div class="row" id="mover">
                     <div class="row" id="competencias">
-                        <p>DIBUJO TECNICO</p>
+                        <h6>DIBUJO TECNICO</h6>
                         <div class="row" id="skills">
-                            <div class="col-3">
+                            <div class="col-4"id="letras">
                                 <p>AutoCAD</p>
                             </div>
-                            <div class="col-9" id="letras">
+                            <div class="col-8" id="letras">
                                 <p>Nivel: Avanzado</p>
                             </div>
                         </div>
+                        <div class="separador"></div>
                         <div class="row" id="skills">
-                            <div class="col-3">
+                            <div class="col-4"id="letras">
                                 <p>SolidWorks</p>
                             </div>
-                            <div class="col-9" id="letras">
+                            <div class="col-8" id="letras">
                                 <p>Nivel: Intermedio</p>
                             </div>
                         </div>
+                        <h6>PROGRAMACIÓN</h6>
+                        <div class="row" id="skills">
+                            <div class="col-4"id="letras">
+                                <p>HTML</p>
+                            </div>
+                            <div class="col-8" id="letras">
+                                <p>Nivel: Trainee</p>
+                            </div>
+                        </div>
+                        <div class="separador"></div>
+                        <div class="row" id="skills">
+                            <div class="col-4"id="letras">
+                                <p>CSS</p>
+                            </div>
+                            <div class="col-8" id="letras">
+                                <p>Nivel: Trainee</p>
+                            </div>
+                        </div>
+                        <div class="separador"></div>
+                        <div class="row" id="skills">
+                            <div class="col-4"id="letras">
+                                <p>JS</p>
+                            </div>
+                            <div class="col-8" id="letras">
+                                <p>Nivel: Trainee</p>
+                            </div>
+                        </div>
+                        <div class="separador"></div>
+                        <div class="row" id="skills">
+                            <div class="col-4" id="letras">
+                                <p>PHP</p>
+                            </div>
+                            <div class="col-8" id="letras">
+                                <p>Nivel: Trainee</p>
+                            </div>
+                        </div>
+                        <div class="separador"></div>
+                        <div class="row" id="skills">
+                            <div class="col-4"id="letras">
+                                <p>C / C++ / C#</p>
+                            </div>
+                            <div class="col-8" id="letras">
+                                <p>Nivel: Junior</p>
+                            </div>
+                        </div>
+                        <div class="separador"></div>
+                        <div class="row" id="skills">
+                            <div class="col-4" id="letras">
+                                <p>SQL</p>
+                            </div>
+                            <div class="col-8" id="letras">
+                                <p>Nivel: Junior</p>
+                            </div>
+                        </div>
+                        <div class="separador"></div>
+                        <div class="row" id="skills">
+                            <div class="col-4"id="letras">
+                                <p>ASP .NET</p>
+                            </div>
+                            <div class="col-8" id="letras">
+                                <p>Nivel: Junior</p>
+                            </div>
+                        </div>
+                        <div class="separador"></div>
+                        <div class="row" id="skills">
+                            <div class="col-4" id="letras">
+                                <p>Visual Basic</p>
+                            </div>
+                            <div class="col-8" id="letras">
+                                <p>Nivel: Junior</p>
+                            </div>
+                        </div>
+                        <div class="separador"></div>
                     </div>
                 </div>
             </div>
