--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Fredoka+One&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Anton&family=Fredoka+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Fredoka+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -23,7 +25,7 @@
             <img src="img/fotoP.jpg" class="redondearImg">
         </div>
         <div class="col-8">
-            <p style="margin-top: 10px; color: white;">Sobre mi...</p>
+            <p style="margin-top: 10px; color: black;">Sobre mi...</p>
             <p class="sobreMi">Soy una persona proactiva, me encanta encarar nuevos desafios, trabajar en equipo y
                 aprender cosas nuevas!</p>
         </div>
@@ -65,7 +67,7 @@
                             y finalizar cada proyecto, disciplinado y metodico.
                             Mi mayor cualidad es la dedicación, esfuerzo, exigencia y compromiso
                             que pongo en cada proyecto en el que participo.</p>
-                    </div> 
+                    </div>
                 </div>
             </div>
 
@@ -158,7 +160,7 @@
                     <div class="row" id="competencias">
                         <h6>DIBUJO TECNICO</h6>
                         <div class="row" id="skills">
-                            <div class="col-4"id="letras">
+                            <div class="col-4" id="letras">
                                 <p>AutoCAD</p>
                             </div>
                             <div class="col-8" id="letras">
@@ -167,7 +169,7 @@
                         </div>
                         <div class="separador"></div>
                         <div class="row" id="skills">
-                            <div class="col-4"id="letras">
+                            <div class="col-4" id="letras">
                                 <p>SolidWorks</p>
                             </div>
                             <div class="col-8" id="letras">
@@ -176,7 +178,7 @@
                         </div>
                         <h6>PROGRAMACIÓN</h6>
                         <div class="row" id="skills">
-                            <div class="col-4"id="letras">
+                            <div class="col-4" id="letras">
                                 <p>HTML</p>
                             </div>
                             <div class="col-8" id="letras">
@@ -185,7 +187,7 @@
                         </div>
                         <div class="separador"></div>
                         <div class="row" id="skills">
-                            <div class="col-4"id="letras">
+                            <div class="col-4" id="letras">
                                 <p>CSS</p>
                             </div>
                             <div class="col-8" id="letras">
@@ -194,7 +196,7 @@
                         </div>
                         <div class="separador"></div>
                         <div class="row" id="skills">
-                            <div class="col-4"id="letras">
+                            <div class="col-4" id="letras">
                                 <p>JS</p>
                             </div>
                             <div class="col-8" id="letras">
@@ -212,7 +214,7 @@
                         </div>
                         <div class="separador"></div>
                         <div class="row" id="skills">
-                            <div class="col-4"id="letras">
+                            <div class="col-4" id="letras">
                                 <p>C / C++ / C#</p>
                             </div>
                             <div class="col-8" id="letras">
@@ -230,7 +232,7 @@
                         </div>
                         <div class="separador"></div>
                         <div class="row" id="skills">
-                            <div class="col-4"id="letras">
+                            <div class="col-4" id="letras">
                                 <p>ASP .NET</p>
                             </div>
                             <div class="col-8" id="letras">
@@ -250,29 +252,55 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <h4>REDES SOCIALES <img src="img/flecha2.png" id="mostrar5"></h4>
+                <div class="row" id="mover">
+                    <div class="row" id="redesSociales">
+                        <div class="row" id="skills">
+                            <div class="col-4" id="letras">
+                                <a href="https://www.facebook.com/AleeOmarr/" target="_blank"><img src="img/logoF.png"
+                                    id="contacto" />Facebook </a>
+                            </div>
+                            <div class="col-4" id="letras">
+                                <a href="https://www.linkedin.com/in/alejo-david-tarrio-omar-0a43b3249/" target="_blank"><img src="img/logoL.png"
+                                    id="contacto" />Linkedin </a></a>
+                            </div>
+                        </div>
+                        <div class="separador"></div>
+                        <div class="row" id="skills">
+                            <div class="col-4" id="letras">
+                                <a href="https://www.instagram.com/ale_fawcett/?next=%2F" target="_blank"> <img src="img/logoI.png"
+                                    id="contacto" />Instagram</a>
+                            </div>
+                            <div class="col-4" id="letras">
+                                <a href="https://github.com/AleFaw" target="_blank"><img src="img/logoG.png"
+                                    id="contacto" />GitHub </a></a>
+                            </div>
+                        </div>
+                        <div class="separador"></div>
+                        <div class="row" id="skills">
+                            <div class="col-4" id="letras">
+                                <a href="https://wa.me/+541123230811" target="_blank"> <img src="img/logoW.png" id="contacto" />Whatsapp
+                                </a>
+                            </div>
+                            <div class="col-4" id="letras">
+                                <a href="https://t.me/AleFawcett" target="_blank"><img src="img/logoTe.png"
+                                    id="contacto" />Telegram </a></a>
+                            </div>
+                        </div>
+                        <div class="separador"></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-
     <div class="separador"></div>
     <br>
 
+    
+
     <!------------ CODIGO DE PIE DE PAGINA / REDES SOCIALES ------------>
-    <footer>
-        <div class="row">
-            <div id="redS" class="col-4">
-                <a href="https://www.facebook.com/AleeOmarr/" target="_blank"><img src="img/logoF.png"
-                        id="contacto" />Facebook </a>
-            </div>
-            <div id="redS" class="col-4">
-                <a href="https://www.instagram.com/ale_fawcett/?next=%2F" target="_blank"> <img src="img/logoI.png"
-                        id="contacto" />Instagram</a>
-            </div>
-            <div id="redS" class="col-4">
-                <a href="https://wa.me/+541123230811" target="_blank"> <img src="img/logoW.png" id="contacto" />Whatsapp
-                </a>
-            </div>
-        </div>
-    </footer>
+    <footer> </footer>
     <br>
 
     <script src="js/funciones.js"></script>
