--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="col-7">
             <!------------ CODIGO DE INFORMACION PERFIL / ESTUDIO / ETC... ------------>
             <div class="row">
-                <h4>PERFIL <img src="img/flecha.png" id="mostrar"></h4>
+                <h4 id="responsive">PERFIL <img src="img/flecha.png" id="mostrar"></h4>
                 <div class="row" id="mover">
                     <div class="col-10">
                         <p id="perfil">Mente agil, perseverante, con un alto nivel de trabajo en equipo y un
@@ -72,40 +72,40 @@
             </div>
 
             <div class="row">
-                <h4>EDUCACIÓN <img src="img/flecha.png" id="mostrar2"></h4>
+                <h4 id="responsive">EDUCACIÓN <img src="img/flecha.png" id="mostrar2"></h4>
                 <div class="row">
                     <div id="educacion">
                         <div class="row">
                             <div class="col-3">
-                                <h6>CARRERA DE GRADO <br></h6>
+                                <h6 id="responsive2">CARRERA DE GRADO <br></h6>
                                 cuarto año. <br>
                                 <p id="duracion">Duración 5 años. <br></p>
                             </div>
                             <div class="col-9">
-                                <h6>Ingeniería Mecatrónica <br></h6>
+                                <h6 id="responsive2">Ingeniería Mecatrónica <br></h6>
                                 Universidad Nacional de Lomas de Zamora - (UNLZ)
                             </div>
                         </div>
 
                         <div class="row">
                             <div class="col-3">
-                                <h6>TECNICATURA<br></h6>
+                                <h6 id="responsive2">TECNICATURA<br></h6>
                                 tercer año. <br>
                                 <p id="duracion">Duración 3 años. <br></p>
                             </div>
                             <div class="col-9">
-                                <h6>Programación de computadores. <br></h6>
+                                <h6 id="responsive2">Programación de computadores. <br></h6>
                                 Universidad Nacional de Lomas de Zamora - (UNLZ)
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-3">
-                                <h6>TECNICATURA<br></h6>
+                                <h6 id="responsive2">TECNICATURA<br></h6>
                                 Finalizada. <br>
                                 <p id="duracion">Duración 3 años. <br></p>
                             </div>
                             <div class="col-9">
-                                <h6>Tecnicatura en gestión tecno mecánica de pymes. <br></h6>
+                                <h6 id="responsive2">Tecnicatura en gestión tecno mecánica de pymes. <br></h6>
                                 Universidad Nacional de Lomas de Zamora - (UNLZ)
                             </div>
                         </div>
@@ -114,15 +114,15 @@
             </div>
 
             <div class="row">
-                <h4>EXPERIENCIA PROFESIONAL<img src="img/flecha.png" id="mostrar3"></h4>
+                <h4 id="responsive">EXPERIENCIA PROFESIONAL<img src="img/flecha.png" id="mostrar3"></h4>
                 <div class="row">
                     <div id="experiencia">
                         <div class="row">
                             <div class="col-3">
-                                <h6>Ingeniera S. Patricelli.</h6>
+                                <h6 id="responsive2">Ingeniera S. Patricelli.</h6>
                             </div>
                             <div class="col-9">
-                                <h6 style="color:gray">Proyectista/Cadista</h6>
+                                <h6 id="responsive2" style="color:gray">Proyectista/Cadista</h6>
                             </div>
                         </div>
                         <div class="row">
@@ -136,10 +136,10 @@
 
                         <div class="row">
                             <div class="col-3">
-                                <h6>Yanil, Independiente.</h6>
+                                <h6 id="responsive2">Yanil, Independiente.</h6>
                             </div>
                             <div class="col-9">
-                                <h6 style="color:gray">Recepcionista telefonico.</h6>
+                                <h6 id="responsive2" style="color:gray">Recepcionista telefonico.</h6>
                             </div>
                         </div>
                         <div class="row">
@@ -155,10 +155,10 @@
         <div class="col-5" id="costado">
             <!------------ CODIGO DE SKILLS ------------>
             <div class="row">
-                <h4>COMPETENCIAS <img src="img/flecha2.png" id="mostrar4"></h4>
+                <h4 id="responsive">COMPETENCIAS <img src="img/flecha2.png" id="mostrar4"></h4>
                 <div class="row" id="mover">
                     <div class="row" id="competencias">
-                        <h6>DIBUJO TECNICO</h6>
+                        <h6 id="responsive2">DIBUJO TECNICO</h6>
                         <div class="row" id="skills">
                             <div class="col-4" id="letras">
                                 <p>AutoCAD</p>
@@ -176,7 +176,7 @@
                                 <p>Nivel: Intermedio</p>
                             </div>
                         </div>
-                        <h6>PROGRAMACIÓN</h6>
+                        <h6 id="responsive2">PROGRAMACIÓN</h6>
                         <div class="row" id="skills">
                             <div class="col-4" id="letras">
                                 <p>HTML</p>
@@ -253,7 +253,7 @@
                 </div>
             </div>
             <div class="row">
-                <h4>REDES SOCIALES <img src="img/flecha2.png" id="mostrar5"></h4>
+                <h4 id="responsive">REDES SOCIALES <img src="img/flecha2.png" id="mostrar5"></h4>
                 <div class="row" id="mover">
                     <div class="row" id="redesSociales">
                         <div class="row" id="skills">
