--- a/index.html
+++ b/index.html
@@ -77,35 +77,35 @@
                     <div id="educacion">
                         <div class="row">
                             <div class="col-3">
-                                <h6 id="responsive2">CARRERA DE GRADO <br></h6>
+                                <h6 id="responsive3">CARRERA DE GRADO <br></h6>
                                 cuarto año. <br>
                                 <p id="duracion">Duración 5 años. <br></p>
                             </div>
                             <div class="col-9">
-                                <h6 id="responsive2">Ingeniería Mecatrónica <br></h6>
+                                <h6 id="responsive3">Ingeniería Mecatrónica <br></h6>
                                 Universidad Nacional de Lomas de Zamora - (UNLZ)
                             </div>
                         </div>
 
                         <div class="row">
                             <div class="col-3">
-                                <h6 id="responsive2">TECNICATURA<br></h6>
+                                <h6 id="responsive3">TECNICATURA<br></h6>
                                 tercer año. <br>
                                 <p id="duracion">Duración 3 años. <br></p>
                             </div>
                             <div class="col-9">
-                                <h6 id="responsive2">Programación de computadores. <br></h6>
+                                <h6 id="responsive3">Programación de computadores. <br></h6>
                                 Universidad Nacional de Lomas de Zamora - (UNLZ)
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-3">
-                                <h6 id="responsive2">TECNICATURA<br></h6>
+                                <h6 id="responsive3">TECNICATURA<br></h6>
                                 Finalizada. <br>
                                 <p id="duracion">Duración 3 años. <br></p>
                             </div>
                             <div class="col-9">
-                                <h6 id="responsive2">Tecnicatura en gestión tecno mecánica de pymes. <br></h6>
+                                <h6 id="responsive3">Tecnicatura en gestión tecno mecánica de pymes. <br></h6>
                                 Universidad Nacional de Lomas de Zamora - (UNLZ)
                             </div>
                         </div>
@@ -170,7 +170,7 @@
                         <div class="separador"></div>
                         <div class="row" id="skills">
                             <div class="col-4" id="letras">
-                                <p>SolidWorks</p>
+                                <p>SolidWork</p>
                             </div>
                             <div class="col-8" id="letras">
                                 <p>Nivel: Intermedio</p>
